@@ -149,7 +149,7 @@ namespace Deveel.Data {
 		/// active at any one time rather than a unique thread for each 
 		/// connection.
 		/// </remarks>
-		public void Execute(User user, DatabaseConnection database, EventHandler runner) {
+		public void Execute(User user, DatabaseConnection database, IDatabaseEvent runner) {
 			lock (available_worker_threads) {
 				if (is_executing_commands) {
 					WorkerThread worker = FirstWaitingThread;
@@ -250,9 +250,9 @@ namespace Deveel.Data {
 		private sealed class RunCommand {
 			public readonly User user;
 			public readonly DatabaseConnection database;
-			public readonly EventHandler runnable;
+			public readonly IDatabaseEvent runnable;
 
-			public RunCommand(User user, DatabaseConnection database, EventHandler runnable) {
+			public RunCommand(User user, DatabaseConnection database, IDatabaseEvent runnable) {
 				this.user = user;
 				this.database = database;
 				this.runnable = runnable;
